--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="min-h-full">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zaplytic</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="relative bg-gray-900">
+    <div id="root" class="h-full pt-15 text-gray-100 fs--base"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
